(wezterm,tmux) make wezterm and tmux seem like the same program
- make wezterm's right-status display the current tmux session
- move the tmux statusline to the top of the window
- instead of showing the session in the tmux statusline, put a menu button

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -165,8 +165,8 @@ set -g @standoutcolor 'colour5'
 set -g @bgcolor 'terminal'
 
 # status bar configuration
-set -g status-position bottom
-set -g pane-border-status bottom
+set -g status-position top
+set -g pane-border-status top
 
 # Panes
 set -g pane-border-lines single
@@ -187,7 +187,7 @@ set -g @accentcolor 'colour6'
 set -g @fgcolor 'terminal'
 set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
 set-hook -g client-focus-in "set -g @accentcolor 'colour6'; set -g @fgcolor 'terminal'"
-set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
+set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},bold,push-default"
 
 # Remove the window status. I'll add it to the statusbar manually
 set -g window-status-format ''
@@ -202,7 +202,7 @@ set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status
 set -g status-left "#{E:@window-info-format}#{tmux_mode_indicator}"
 set -g status-left-length 999
 
-set -g @session "#[range=left]#[bg=default,fg=default]#S"
+set -g @session "#[range=left]#[bg=default,fg=default]󰍜 "
 set -g status-right "#{E:@session} "
 set -g status-right-length 999
 
