--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -70,9 +70,9 @@ bind r run-shell -b 'tmux source ~/.config/tmux/tmux.conf\; set @mode_indicator_
 
 # Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
 # the url spans multiple lines in a tmux pane, since my terminal is not aware of the tmux pane boundaries.
-bind-key -T copy-mode C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
-bind-key -T copy-mode-vi C-MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
-bind-key -T root C-MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
+bind-key -T copy-mode C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
+bind-key -T copy-mode-vi C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
+bind-key -T root C-MouseUp1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
 
 # navigate windows. These keys are sent by the terminal since the actual keys I use don't work now
 # since TMUX lost suuport for extended keys.
@@ -101,7 +101,7 @@ bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
 # Make a new window by clicking the new window button
-bind-key -T root MouseDown1StatusRight new-window -c "#{pane_current_path}"
+bind-key -T root MouseUp1StatusRight new-window -c "#{pane_current_path}"
 
 # Go to the last (previously selected) window
 bind-key -n M-BSpace last-window
@@ -122,7 +122,7 @@ bind-key -n M-k if-shell "#{@is_vim}" 'send-keys M-k'  'select-pane -U -Z'
 bind-key -n M-l if-shell "#{@is_vim}" 'send-keys M-l'  'select-pane -R -Z'
 
 # Open context menus on right click
-bind-key -T root MouseDown3Pane \
+bind-key -T root MouseUp3Pane \
     if-shell -F -t = "#{||:#{mouse_any_flag},#{&&:#{pane_in_mode},#{?#{m/r:(copy|view)-mode,#{pane_mode}},0,1}$}}" \
         { \
             select-pane -t = ; send-keys -M \
@@ -139,12 +139,12 @@ bind-key -T root MouseDown3Pane \
                 Respawn R { respawn-pane -k } \
                 "#{?#{>:#{window_panes},1},,-}#{?window_zoomed_flag,Unzoom,Zoom}" z { resize-pane -Z } \
         }
-bind-key -T root MouseDown3Status \
+bind-key -T root MouseUp3Status \
     display-menu -O -T "#[align=centre]#{window_index}:#{window_name}" -t = -x W -y W \
         Kill X { kill-window } \
         Respawn R { respawn-window -k } \
         Rename n { command-prompt -F -I "#W" { rename-window -t "#{window_id}" "%%" } }
-bind-key -T root MouseDown3StatusLeft \
+bind-key -T root MouseUp1StatusLeft \
     display-menu -O -t = -x M -y W \
         Renumber N { move-window -r } \
         Rename n { command-prompt -I "#S" { rename-session "%%" } } \
