--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -161,7 +161,7 @@ bind s run-shell -b "${TMUX_PLUGIN_MANAGER_PATH}resurrect/scripts/save.sh"
 
 # Aesthetics {{{
 set -g @bordercolor 'colour8'
-set -g @standoutcolor 'colour5'
+set -g @standoutcolor 'colour7'
 set -g @bgcolor 'terminal'
 
 # status bar configuration
@@ -170,7 +170,7 @@ set -g pane-border-status top
 
 # Panes
 set -g pane-border-lines single
-set -g pane-active-border-style "fg=colour3"
+set -gF pane-active-border-style "fg=#{@standoutcolor}"
 set -g pane-border-style "fg=colour15"
 
 # Clock Mode
@@ -252,7 +252,7 @@ set -g @suspend_key 'M-z'
 # The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way if the active
 # pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-format::#{l:#{?pane_active\\,#[bold fg=#{@standoutcolor}] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-format::#{l:#{?pane_active\\,#[bold fg=colour6] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
