(tmux) open context menu on mouse down
This way I shadow the default context menus. Also this is how browsers behave

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -122,7 +122,7 @@ bind-key -n M-k if-shell "#{@is_vim}" 'send-keys M-k'  'select-pane -U -Z'
 bind-key -n M-l if-shell "#{@is_vim}" 'send-keys M-l'  'select-pane -R -Z'
 
 # Open context menus on right click
-bind-key -T root MouseUp3Pane \
+bind-key -T root MouseDown3Pane \
     if-shell -F -t = "#{||:#{mouse_any_flag},#{&&:#{pane_in_mode},#{?#{m/r:(copy|view)-mode,#{pane_mode}},0,1}$}}" \
         { \
             select-pane -t = ; send-keys -M \
@@ -139,7 +139,7 @@ bind-key -T root MouseUp3Pane \
                 Respawn R { respawn-pane -k } \
                 "#{?#{>:#{window_panes},1},,-}#{?window_zoomed_flag,Unzoom,Zoom}" z { resize-pane -Z } \
         }
-bind-key -T root MouseUp3Status \
+bind-key -T root MouseDown3Status \
     display-menu -O -T "#[align=centre]#{window_index}:#{window_name}" -t = -x W -y W \
         Kill X { kill-window } \
         Respawn R { respawn-window -k } \
