--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -170,7 +170,7 @@ set -g pane-border-status top
 
 # Panes
 set -g pane-border-lines single
-set -gF pane-active-border-style "fg=#{@standoutcolor}"
+set -gF pane-active-border-style "fg=colour6"
 set -g pane-border-style "fg=colour15"
 
 # Clock Mode
@@ -187,7 +187,7 @@ set -g @accentcolor 'colour6'
 set -g @fgcolor 'terminal'
 set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
 set-hook -g client-focus-in "set -g @accentcolor 'colour6'; set -g @fgcolor 'terminal'"
-set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},bold,push-default"
+set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
 
 # Remove the window status. I'll add it to the statusbar manually
 set -g window-status-format ''
@@ -252,7 +252,7 @@ set -g @suspend_key 'M-z'
 # The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way if the active
 # pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-format::#{l:#{?pane_active\\,#[bold fg=colour6] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-format::#{l:#{?pane_active\\,#[bold fg=colour3] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
