--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -173,6 +173,10 @@ set -g pane-border-lines single
 set -gF pane-active-border-style "fg=colour6"
 set -g pane-border-style "fg=colour15"
 
+# Windows
+setw -g window-style "fg=colour15,bg=terminal"
+setw -g window-active-style "fg=terminal,bg=terminal"
+
 # Clock Mode
 set -g clock-mode-colour 'cyan'
 set -g clock-mode-style 24
