--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -s escape-time 0
 # have window indices start from 1
 set -g base-index 1
 set -g prefix C-Space
-set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[bold fg=colour3] #{@copy_symbol} COPY ,}'
+set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[bold] #{@copy_symbol} COPY ,}'
 set-option -g display-time 2000
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
@@ -256,7 +256,7 @@ set -g @suspend_key 'M-z'
 # The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way if the active
 # pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-format::#{l:#{?pane_active\\,#[bold fg=colour3] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-format::#{l:#{?pane_active\\,#[bold] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
