--- a/dotfiles/nix/nix.conf
+++ b/dotfiles/nix/nix.conf
@@ -1,4 +1,4 @@
-experimental-features = nix-command flakes
+experimental-features = nix-command flakes auto-allocate-uids
 
 # This is buggy: https://github.com/NixOS/nix/issues/7273
 auto-optimise-store = false
