(tmux) remove menu option to renumber windows, this happens automatically

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -146,12 +146,10 @@ bind-key -T root MouseDown3Status \
         Rename n { command-prompt -F -I "#W" { rename-window -t "#{window_id}" "%%" } }
 bind-key -T root MouseUp1StatusLeft \
     display-menu -O -t = -x M -y W \
-        Renumber N { move-window -r } \
-        Rename n { command-prompt -I "#S" { rename-session "%%" } } \
-        '' \
-        "New Session" s { new-session } \
         "New Window" w { new-window } \
-        "Choose Session" alt+s { choose-tree -Zs }
+        "New Session" s { new-session } \
+        "Rename Session" r { command-prompt -I "#S" { rename-session "%%" } } \
+        "Choose Session" c { choose-tree -Zs }
 
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
