(tmux) remove scratch session
Never really used it. Instead I can just open a new window

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -62,7 +62,7 @@ set-option -g history-limit 50000
 bind-key -n MouseDrag1Status swap-window -d -t=
 
 # Create a new window using the current pane's directory as the new window's directory
-bind t new-window -c "#{pane_current_path}"
+bind -n M-t new-window -c "#{pane_current_path}"
 
 # reload
 set -g @reload_symbol "\ue348 "
@@ -103,15 +103,8 @@ bind-key -n M-9 select-window -t 9
 # Make a new window by clicking the new window button
 bind-key -T root MouseUp1StatusRight new-window -c "#{pane_current_path}"
 
-# Go to the last (previously selected) window
+# Go to the previously selected window
 bind-key -n M-BSpace last-window
-
-# scratchpad session
-bind -n M-t if-shell -F '#{==:#{session_name},scratch}' {
-    switch-client -l
-} {
-    new-session -A -c '#{pane_current_path}' -s scratch 
-}
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
