--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -188,6 +188,7 @@ set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
 set -g window-status-format ''
 set -g window-status-current-format ''
 
+# Left half of status bar
 set -g @new_window_symbol "\uea60 "
 set -g @zoom_indicator " \U000f0293 "
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
@@ -197,10 +198,12 @@ set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status
 set -g status-left "#{E:@window-info-format}#{tmux_mode_indicator}"
 set -g status-left-length 999
 
+# Right half of status bar
 set -g @session "#[range=left]#[bg=default,fg=default]󰍜 "
 set -g status-right "#{E:@session} "
 set -g status-right-length 999
 
+# Popups
 set -g popup-border-lines heavy
 set -g popup-border-style "fg=#{@bordercolor}"
 # }}}
