(tmux) stop the reload indicator from flashing
Though now there is a delay before it's shown

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -66,7 +66,8 @@ bind -n M-t new-window -c "#{pane_current_path}"
 
 # reload
 set -g @reload_symbol "\ue348 "
-bind r run-shell -b 'tmux source ~/.config/tmux/tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
+set -g @checkmark_symbol "\uf42e "
+bind r run-shell -b 'tmux source ~/.config/tmux/tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@checkmark_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
 
 # Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
 # the url spans multiple lines in a tmux pane, since my terminal is not aware of the tmux pane boundaries.
@@ -195,8 +196,18 @@ set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); su
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
 set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]#(#{@superscript_number} #I)#[fg=default] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore]#{@zoom_indicator},}#[nounderscore]"
 set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15]#{@new_window_symbol}"
+# TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator flash. Maybe I
+# can find a way to only set this if something changes or see if this can be addressed in tmux_mode_indicator.
+# Until then, I moved the reload indicator logic to here so it doesn't flash. Now there's a little delay before
+# it's shown.
 set -g status-left "#{E:@window-info-format}#{tmux_mode_indicator}"
 set -g status-left-length 999
+if-shell 'tmux show-options -g @config-loaded' {
+    set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADING#[noreverse]#{@right_symbol}"
+    refresh-client -S
+} {
+    set -g @config-loaded "1"
+}
 
 # Right half of status bar
 set -g @session "#[range=left]#[bg=default,fg=default]󰍜 "
