(tmux) rename variable

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -198,8 +198,8 @@ if-shell 'tmux show-options -g @config-loaded' {
 }
 
 # Right half of status bar
-set -g @session "#[range=left]#[bg=default,fg=default]󰍜 "
-set -g status-right "#{E:@session} "
+set -g @menu-button "#[range=left]#[bg=default,fg=default]󰍜 "
+set -g status-right "#{E:@menu-button} "
 set -g status-right-length 999
 
 # Popups
