(tmux) make active border same as terminal foreground color

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -154,7 +154,7 @@ set -g pane-border-status top
 
 # Panes
 set -g pane-border-lines single
-set -gF pane-active-border-style "fg=colour15"
+set -gF pane-active-border-style "fg=terminal"
 set -g pane-border-style "fg=colour15"
 
 # Clock Mode
