--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -34,11 +34,13 @@ jobs:
           name: bigolu
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix bundle --show-trace --bundler .# .#
-      # Dereference the symlink so I can upload the actual executable. The symlink name will look like
-      # 'shell-x86_64-linux' so I'm using a glob pattern to match it.
+      - run: nix bundle --show-trace --bundler .# .#terminal
+      # Dereference the symlinks so I can upload the actual executables. The symlinks' names will look like
+      # '{shell,terminal}-x86_64-linux' so I'm using a glob pattern to match them.
       - run: |
           mkdir tmp
           cp -L shell-* ./tmp/
+          cp -L terminal-* ./tmp/
       - name: Upload executable
         uses: svenstaro/upload-release-action@v2
         with:
