(tmux) enable undercurl support

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -27,6 +27,8 @@ set-option -g allow-passthrough on
 set-option -g focus-events on
 set -g set-clipboard on
 set-option -g detach-on-destroy off
+# undercurl support
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
 # Border characters for statusbar indicators
 set -g @left_symbol "\ue0b6"
