--- a/dotfiles/fontconfig/local.conf
+++ b/dotfiles/fontconfig/local.conf
@@ -4,7 +4,7 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Iosevka Biggs</family>
+            <family>Iosevka Comfy Fixed</family>
             <family>Symbols Nerd Font Mono</family>
         </prefer>
     </alias>
@@ -26,7 +26,7 @@
     <alias>
         <family>ui-monospace</family>
         <prefer>
-            <family>Iosevka Biggs</family>
+            <family>Iosevka Comfy Fixed</family>
             <family>Symbols Nerd Font Mono</family>
         </prefer>
     </alias>
@@ -53,7 +53,7 @@
             <string>Menlo</string>
         </test>
         <edit binding="same" mode="assign" name="family">
-            <string>Iosevka Biggs</string>
+            <string>Iosevka Comfy Fixed</string>
         </edit>
     </match>
 </fontconfig>
