(tmux) use prefix for window splitting keybinds

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -144,8 +144,8 @@ bind-key -T root MouseUp1StatusLeft \
         "Rename Session" r { command-prompt -I "#S" { rename-session "%%" } } \
         "Choose Session" c { choose-tree -Zs }
 
-bind -n M-'|' split-window -h -c '#{pane_current_path}'
-bind -n M-'-' split-window -v -c '#{pane_current_path}'
+bind '|' split-window -h -c '#{pane_current_path}'
+bind '-' split-window -v -c '#{pane_current_path}'
 bind-key -n M-s choose-tree -Zs
 # }}}
 
