--- a/flake-modules/bundler/gozip/gomod2nix.toml
+++ b/flake-modules/bundler/gozip/gomod2nix.toml
@@ -1,6 +1,9 @@
 schema = 3
 
 [mod]
+  [mod."github.com/deepakjois/gousbdrivedetector"]
+    version = "v0.0.0-20220514003247-ea439de1c459"
+    hash = "sha256-jKNFARY6VUnhVIdkw/kMHA9m8KyrtT3Obi9721St5oU="
   [mod."github.com/klauspost/compress"]
     version = "v1.16.5"
     hash = "sha256-m4wBSvrFyp//S4dB6S9ggEVFxNWTiJ8RBuucscuMDAs="
