Revert "(tmux neovim) click to open hyperlink instead of ctrl+click"
This reverts commit 3284bdd6f11c85af771cbb4d42f40867327fc25a.

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -65,9 +65,9 @@ bind -n M-r run-shell -b 'tmux source ~/.config/tmux/tmux.conf\; set @mode_indic
 
 # Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
 # the url spans multiple lines in a tmux pane, since my terminal is not aware of the tmux pane boundaries.
-bind-key -T copy-mode MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
-bind-key -T copy-mode-vi MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
-bind-key -T root MouseUp1Pane select-pane -t = \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
+bind-key -T copy-mode C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
+bind-key -T copy-mode-vi C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
+bind-key -T root C-MouseUp1Pane select-pane -t = \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
 
 # Move the cursor if any of the screen lines that the commandline's buffer occupy are clicked.
 bind-key -T copy-mode MouseDown1Pane select-pane \; run-shell "tmux-move-cursor '#{mouse_x}' '#{mouse_y}' '#{cursor_x}' '#{cursor_y}' '#{session_id}' '#{window_id}' '#{pane_id}' '#{pane_pid}'" \; send-keys -M
