(tmux) enable underline styles support

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -27,8 +27,6 @@ set-option -g allow-passthrough on
 set-option -g focus-events on
 set -g set-clipboard on
 set-option -g detach-on-destroy off
-# undercurl support
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
 # Border characters for statusbar indicators
 set -g @left_symbol "\ue0b6"
@@ -40,6 +38,9 @@ set -g fill-character '╱'
 
 # Enable hyperlinks
 set -ga terminal-features "*:hyperlinks"
+
+# Enable underline styles. This way I can have a single underline color while the text above it is in multiple colors.
+set -ga terminal-features "*:usstyle"
 
 # Clipboard copying
 set -ga terminal-features "*:clipboard"
