(fish, tmux) use vscode as $EDITOR if the tmux client is vscode

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -50,6 +50,9 @@ set -g copy-command "pbcopy"
 set-option -g status-keys emacs
 
 set-option -g history-limit 50000
+
+# This way I can tell if the active tmux client is vscode's integrated terminal.
+set-option -ga update-environment " VSCODE_INJECTION"
 # }}}
 
 # Bindings {{{
