replace any invocations of `nvim` with `myeditor`

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -229,14 +229,14 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 # where resurrect can retain spaces in arguments, without splitting them into separate arguments, is Linux
 # with the 'linux_procfs' strategy. So here I only set arguments to be replaced if I'm on Linux.
 # issue: https://github.com/tmux-plugins/tmux-resurrect/issues/60
-set -g @nvim_resurrect '"~nvim->nvim"'
+set -g @myeditor_resurrect '"~myeditor->myeditor"'
 if-shell "uname | grep -q Linux" {
     # TODO: Restoring commands with spaces is not working on Linux, though it should with procfs as the restore
     # strategy. Until it's fixed, I will not restore arguments on Linux either for the reason in the TODO above.
-    set -g @nvim_resurrect '"~nvim->nvim"'
+    set -g @myeditor_resurrect '"~myeditor->myeditor"'
 }
 # "~sh" is to match "/bin/sh <path_to_man> <manpage>"
-set -gF @resurrect-processes 'watch viddy #{@nvim_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl"'
+set -gF @resurrect-processes 'watch viddy #{@myeditor_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl"'
 # This strategy can restore quotes on the commandline so that the spaces in arguments are retained.
 # e.g. `echo 'one argument with spaces'`. Only supports linux though
 if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
