--- a/dotfiles/smart_plug/linux/smart-plug-daemon.service
+++ b/dotfiles/smart_plug/linux/smart-plug-daemon.service
@@ -2,7 +2,7 @@
 Description=Smart Plug Daemon
 
 [Service]
-ExecStart=/home/biggs/.nix-profile/bin/speakerctl
+ExecStart=/opt/speaker/speakerctl
 
 [Install]
 WantedBy=multi-user.target
