(tmux, wezterm) show session name in tmux status bar instead of wezterm's

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -198,7 +198,7 @@ set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status
 # can find a way to only set this if something changes or see if this can be addressed in tmux_mode_indicator.
 # Until then, I moved the reload indicator logic to here so it doesn't flash. Now there's a little delay before
 # it's shown.
-set -g status-left "#{E:@window-info-format}#{tmux_mode_indicator}"
+set -g status-left " #[fg=colour15](#[fg=default]#S#[fg=colour15]) #{E:@window-info-format}#{tmux_mode_indicator}"
 set -g status-left-length 999
 if-shell 'tmux show-options -g @config-loaded' {
     set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADING#[noreverse]#{@right_symbol}"
