(tmux) use vi mode-keys This way the last character in a selection gets copied, unlike emacs mode

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -47,6 +47,11 @@ set -ga terminal-features "*:clipboard"
 
 set-option -g status-keys emacs
 
+# In emacs mode, when selecting text from left to right, the last character won't be copied
+# since that's how it works in emacs. I'm using vi mode because I find that behavior unintuitive.
+# See: https://github.com/tmux/tmux/issues/3139
+set-option -g mode-keys vi
+
 set-option -g history-limit 50000
 
 # This way I can tell if the active tmux client is vscode's integrated terminal.
