(tmux) putt clipboard settings together

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -25,7 +25,6 @@ set-hook -g client-active attach-session
 set-option -g allow-passthrough on
 # The output from ':checkhealth' in neovim says 'autoread' might not work if this isn't set.
 set-option -g focus-events on
-set -g set-clipboard on
 set-option -g detach-on-destroy off
 
 # Border characters for statusbar indicators
@@ -43,6 +42,10 @@ set -ga terminal-features "*:hyperlinks"
 set -ga terminal-features "*:usstyle"
 
 # Clipboard copying
+# This means tmux will set the external clipboard when text is copied in copy-mode and allows programs running inside
+# tmux to set it as well. For more info:
+# https://github.com/tmux/tmux/wiki/Clipboard
+set -g set-clipboard on
 set -ga terminal-features "*:clipboard"
 
 set-option -g status-keys emacs
