(tmux) move tmux reloading code into a separate file

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -71,8 +71,7 @@ bind -n M-t new-window -c "#{pane_current_path}"
 # reload
 set -g @reload_symbol "\ue348 "
 set -g @checkmark_symbol "\uf42e "
-# Added an extra space before 'RELOADED' so the indicator would take up as much space as the 'RELOADING' one
-bind -n M-r run-shell -b 'printf "#{config_files}" | tr "," "\n" | xargs -I CONFIG tmux source-file CONFIG; tmux set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@checkmark_symbol}  RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
+bind -n M-r run-shell -b 'tmux-config-reload'
 
 # Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
 # the url spans multiple lines in a tmux pane, since my terminal is not aware of the tmux pane boundaries.
