(markdownlint) allow all HTML elements

--- a/dotfiles/markdownlint/markdownlint.jsonc
+++ b/dotfiles/markdownlint/markdownlint.jsonc
@@ -1,9 +1,13 @@
 {
+  "$schema": "https://raw.githubusercontent.com/DavidAnson/markdownlint/main/schema/markdownlint-config-schema.json",
+
   // Disable line length
   "MD013": false,
+
+  // Allow HTML
+  "MD033": false,
 
   // Disable deprecated rules:
   "MD002": false,
   "MD006": false
-
 }
