--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -4,14 +4,10 @@
   // Disable line length
   "MD013": false,
 
+  // Allow HTML
+  "MD033": false,
+
   // Disable deprecated rules:
   "MD002": false,
-  "MD006": false,
-
-  // HTML elements that can be used
-  "MD033": {
-    "allowed_elements": [
-      "span"
-    ]
-  }
+  "MD006": false
 }
