(tmux, wezterm) use alt+[/] key maps directly
These work without extended keys mode so no need to remap them

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -79,11 +79,8 @@ bind-key -T copy-mode C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#
 bind-key -T copy-mode-vi C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
 bind-key -T root C-MouseUp1Pane select-pane -t = \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
 
-# navigate windows. These keys are sent by the terminal since the actual keys I use don't work now
-# since TMUX lost suuport for extended keys.
-# TODO: tmux issue: https://github.com/tmux/tmux/issues/2705#issuecomment-841133549
-bind-key -n F10 previous-window
-bind-key -n F12 next-window
+bind-key -n M-[ previous-window
+bind-key -n M-] next-window
 
 # toggle zoom on pane
 bind-key -n M-m resize-pane -Z
