--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -s escape-time 0
 # have window indices start from 1
 set -g base-index 1
 set -g prefix C-Space
-set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[bold] #{@copy_symbol} COPY ,}'
+set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[bold] 󰆏  COPY ,}'
 set-option -g display-time 2000
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
@@ -28,8 +28,8 @@ set-option -g focus-events on
 set-option -g detach-on-destroy off
 
 # Border characters for statusbar indicators
-set -g @left_symbol "\ue0b6"
-set -g @right_symbol "\ue0b4"
+set -g @left_symbol ""
+set -g @right_symbol ""
 
 # change highlight color
 set -g mode-style "fg=colour0,bg=colour3"
@@ -69,8 +69,8 @@ bind-key -n MouseDrag1Status swap-window -d -t=
 bind -n M-t new-window -c "#{pane_current_path}"
 
 # reload
-set -g @reload_symbol "\ue348 "
-set -g @checkmark_symbol "\uf42e "
+set -g @reload_symbol " "
+set -g @checkmark_symbol " "
 bind -n M-r run-shell -b 'tmux-config-reload'
 
 # Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
@@ -186,12 +186,10 @@ set -g window-status-format ''
 set -g window-status-current-format ''
 
 # Left half of status bar
-set -g @new_window_symbol "\uea60 "
-set -g @zoom_indicator " \U000f0293 "
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]#(#{@superscript_number} #I)#[fg=default] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore]#{@zoom_indicator},}#[nounderscore]"
-set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15]#{@new_window_symbol}"
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]#(#{@superscript_number} #I)#[fg=default] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore]  ,}#[nounderscore]"
+set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15] "
 # TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator flash. Maybe I
 # can find a way to only set this if something changes or see if this can be addressed in tmux_mode_indicator.
 # Until then, I moved the reload indicator logic to here so it doesn't flash. Now there's a little delay before
@@ -241,16 +239,12 @@ if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @prefix_symbol "\U000F030C "
-set -g @copy_symbol "\U000f018f "
-set -g @sync_symbol "\uf46a "
-set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#[blink]#{@prefix_symbol} PREFIX"
-set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#[blink]󰌌  PREFIX"
+set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]  SYNC#[noreverse]#{@right_symbol}"
 set -g @mode_indicator_copy_prompt '#[bg=default] '
 set -g @mode_indicator_empty_prompt '#[bg=default] '
 
 # tmux-suspend
-set -gF @suspended_symbol "\U000F030F "
 set -g @suspend_key 'M-z'
 # I prepend pane-border-format instead of overwriting it so if two windows are in a mode (e.g. copy and suspended),
 # or one window is in two modes, both border indicators will be displayed.
@@ -258,7 +252,7 @@ set -g @suspend_key 'M-z'
 # The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way if the active
 # pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-format::#{l:#{?pane_active\\,#[bold] #{@suspended_symbol} SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-format::#{l:#{?pane_active\\,#[bold] 󰌏  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
