(tmux) inline icons

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -69,8 +69,6 @@ bind-key -n MouseDrag1Status swap-window -d -t=
 bind -n M-t new-window -c "#{pane_current_path}"
 
 # reload
-set -g @reload_symbol " "
-set -g @checkmark_symbol " "
 bind -n M-r run-shell -b 'tmux-config-reload'
 
 # Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
@@ -197,7 +195,7 @@ set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status
 set -g status-left " #[fg=colour15]#[fg=default]#S#[fg=colour15] #{E:@window-info-format}#{tmux_mode_indicator}"
 set -g status-left-length 999
 if-shell 'tmux show-options -g @config-loaded' {
-    set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADING#[noreverse]#{@right_symbol}"
+    set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]  RELOADING#[noreverse]#{@right_symbol}"
     refresh-client -S
 } {
     set -g @config-loaded "1"
