(tmux) add sixel to `terminal-features`

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -48,6 +48,9 @@ set -ga terminal-features "*:usstyle"
 set -g set-clipboard on
 set -ga terminal-features "*:clipboard"
 
+# Enable sixel
+set -ga terminal-features "*:sixel"
+
 set-option -g status-keys emacs
 
 # In emacs mode, when selecting text from left to right, the last character won't be copied
