chore: upgrade tools Fixes ------------------------- * add `common_prefix` setting to atuin config to avoid hitting a bug
Updates
-------------------------
SDL2: 2.28.4 → 2.28.5
SchemaStore-nvim: 2023-12-08 → 2023-12-22
aerial-nvim: 2023-12-08 → 2023-12-24
apex-grammar: 0.0.0+rev=82ee140 → 0.0.0+rev=ca70b23, +12.0 KiB
atuin: 17.0.1 → 17.1.0, +349.5 KiB
bash: 5.2-p15 → 5.2-p21
bash-interactive: 5.2-p15, 5.2-p15-fish → 5.2-p21, 5.2-p21-fish
bat: -50.1 KiB
beancount-grammar: 0.0.0+rev=484f508 → 0.0.0+rev=cd08aef
broot: 1.29.0, 1.29.0-fish → 1.30.1, 1.30.1-fish, +19.4 KiB
cargo: 1.73.0, 1.73.0-fish → 1.74.0, 1.74.0-fish, +2509.0 KiB
cctools-binutils-darwin-wrapper: -32.0 KiB
clang: 15.0.7 → ∅, -312379.8 KiB
clang-wrapper: 15.0.7 → ∅, -59.9 KiB
comma: -11.7 KiB
compiler-rt-libc: 15.0.7 → ∅, -5280.4 KiB
coreutils: 9.3 → 9.4, +11.4 KiB
coreutils-full: 9.3, 9.3-fish → 9.4, 9.4-fish, +12.8 KiB
darwin-system: 24.05pre-git+darwin4.4b9b83d → 24.05pre-git+darwin4.f454cff
delta: -16.5 KiB
dns-root-data: 2019-01-11 → 2023-11-27
dressing-nvim: 2023-12-01 → 2023-12-26
elixir-grammar: 0.0.0+rev=a2861e8 → 0.0.0+rev=11426c5
elm-grammar: 0.0.0+rev=0ae8d47 → 0.0.0+rev=c26afd7
erlang-grammar: 0.0.0+rev=5694277 → 0.0.0+rev=57e6951
expand-response: -9.6 KiB
fd: 8.7.1, 8.7.1-fish → 9.0.0, 9.0.0-fish, -166.5 KiB
fidget-nvim: 2023-12-12 → 2023-12-25, +33.3 KiB
ghostscript: 10.02.0 → 10.02.1
gitcommit-grammar: 0.0.0+rev=6856a5f → 0.0.0+rev=7e3ad5f
gleam-grammar: 0.0.0+rev=b2afa4f → 0.0.0+rev=2b49c49, +16.4 KiB
gnutls: 3.8.1 → 3.8.2
go: 1.21.4 → 1.21.5
gomod-grammar: 0.0.0+rev=f41a273 → 0.0.0+rev=9b86399
gping: -12.4 KiB
haskell-grammar: 0.0.0+rev=ca10c43 → 0.0.0+rev=dd924b8, +148.0 KiB
hoon-grammar: 0.0.0+rev=1d5df35 → 0.0.0+rev=0135187
hyperfine: -12.4 KiB
ijs: 10.02.0 → 10.02.1
index-x86_64: +1204.1 KiB
leo-grammar: 0.0.0+rev=23a9534 → 0.0.0+rev=304611b, +20.0 KiB
libaom: 3.7.0 → 3.7.1
libavif: 1.0.1 → 1.0.2
libkrb5: 1.20.2 → 1.21.2, +19.9 KiB
libsodium: 1.0.18 → 1.0.19, -59.0 KiB
libuv: 1.46

--- a/dotfiles/atuin/config.toml
+++ b/dotfiles/atuin/config.toml
@@ -5,3 +5,10 @@ sync_frequency = "1m"
 common_subcommands = [
   ",",
 ]
+# TODO: There is a bug that throws an error if you configure only `common_subcommands` and not `common_prefix` so as a
+# workaround I'm setting `common_prefix` here to its default value. The fix has been merged into master, but is not
+# included in the latest release so I'll have to wait until it is.
+# fix: https://github.com/atuinsh/atuin/pull/1437
+common_prefix = [
+  "sudo",
+]
