(direnv) whitelist projects

--- a/dotfiles/direnv/direnv.toml
+++ b/dotfiles/direnv/direnv.toml
@@ -2,3 +2,6 @@
   warn_timeout = "1h"
   load_dotenv = true
   strict_env = true
+
+[whitelist]
+prefix = [ "~/.dotfiles", "~/code/bigolu.github.io" ]
