include smart-plug in top level flake instead of using sub flake
Causes issues with scenarios where the lock file can't be written to like `nix run` or `nix-fast-build`

--- a/dotfiles/smart_plug/.envrc
+++ b/dotfiles/smart_plug/.envrc
@@ -4,4 +4,4 @@ if ! has nix_direnv_version || ! nix_direnv_version 3.0.4; then
     "sha256-DzlYZ33mWF/Gs8DDeyjr8mnVmQGx7ASYqA5WlxwvBG4="
 fi
 
-use flake
+use flake '../../#smartPlug'
