--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           name: bigolu
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - run: nix bundle --show-trace --bundler .# .#
+      - run: nix bundle --show-trace --bundler .# .#shell
       - run: nix bundle --show-trace --bundler .# .#terminal
       # Dereference the symlinks so I can upload the actual executables. The symlinks' names will look like
       # '{shell,terminal}-x86_64-linux' so I'm using a glob pattern to match them.
