run cache workflow when dotfiles change

--- a/.github/workflows/cache-build-results.yml
+++ b/.github/workflows/cache-build-results.yml
@@ -6,6 +6,7 @@ on:
       - 'flake.nix'
       - 'flake.lock'
       - 'flake-modules/**'
+      - 'dotfiles/**'
     branches:
       - master
 env:
