--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,14 @@
 # shellcheck shell=bash
 
+if ! has nix_direnv_version || ! nix_direnv_version 3.0.4; then
+  source_url \
+    "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.4/direnvrc" \
+    "sha256-DzlYZ33mWF/Gs8DDeyjr8mnVmQGx7ASYqA5WlxwvBG4="
+fi
+
+use flake
+watch_file ./flake-modules/dev-shell.nix
+
 yellow='\e[33m'
 reset='\e[m'
 secrets_directory='./secrets'
