(nix) handle all tasks through just and add preview tasks

--- a/.envrc
+++ b/.envrc
@@ -19,3 +19,5 @@ if [ -f "$github_file" ]; then
 else
   echo -e "[${yellow}warning${reset}] secret '$github_file' was not found"
 fi
+
+printf "\n[just]\n%s\n\n" "$(just help)"
