(nix) run deadnix in pre-commit hook

--- a/.envrc
+++ b/.envrc
@@ -6,6 +6,7 @@ if ! has nix_direnv_version || ! nix_direnv_version 3.0.4; then
     "sha256-DzlYZ33mWF/Gs8DDeyjr8mnVmQGx7ASYqA5WlxwvBG4="
 fi
 
+nix_direnv_manual_reload
 use flake
 watch_file ./flake-modules/dev-shell.nix
 
