run treefmt on precommit

--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -10,7 +10,6 @@ pre-commit:
     generate-toc-readme:
       glob: "README.md"
       run: just generate-toc
-    fix-nix:
-      glob: "*.nix"
-      run: just fix-nix {staged_files}
+    format:
+      run: just format
 
