move on-change hook into lefthook

--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -16,3 +16,13 @@ pre-commit:
       priority: 2
       run: direnv exec "$PWD" just format
 
+post-merge:
+  scripts:
+    "post-merge.bash":
+      runner: bash
+
+post-rewrite:
+  scripts:
+    "post-rewrite.bash":
+      runner: bash
+
