--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -19,10 +19,10 @@ pre-commit:
 post-merge:
   scripts:
     "post-merge.bash":
-      runner: bash
+      runner: direnv exec "$PWD" bash
 
 post-rewrite:
   scripts:
     "post-rewrite.bash":
-      runner: bash
+      runner: direnv exec "$PWD" bash
 
