rename to generate-toc-readme to codegen-readme
To be consistent with codegen-neovim

--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -8,10 +8,10 @@ colors:
 pre-commit:
   piped: true
   commands:
-    generate-toc-readme:
+    codegen-readme:
       priority: 1
       glob: "README.md"
-      run: direnv exec "$PWD" just generate-toc
+      run: direnv exec "$PWD" just codegen-readme
     format:
       priority: 2
       run: direnv exec "$PWD" just format
