(lefthook) add comment on why I'm setting colors

--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -1,3 +1,6 @@
+# By default lefthook uses true colors (e.g. #FFFFFF), but they may not be readable depending on
+# the terminal background color. Instead I'm using ANSI colors since they come from the terminal's
+# color palette.
 colors:
   cyan: 6
   gray: 8
