fix(direnv): add ~/.local/bin to the PATH before the flake bin so I can use my wrappers

--- a/.envrc
+++ b/.envrc
@@ -10,6 +10,9 @@ nix_direnv_manual_reload
 use flake
 watch_file ./flake-modules/dev-shell.nix
 
+# I want to use my nix wrapper so I need to prepend my bin after the flake bin is added.
+PATH_add ~/.local/bin
+
 yellow='\e[33m'
 reset='\e[m'
 secrets_directory='./secrets'
