test secret fetching

--- a/.envrc
+++ b/.envrc
@@ -8,18 +8,23 @@ fi
 
 nix_direnv_manual_reload
 use flake
-watch_file ./flake-modules/dev-shell.nix
 
 # I want to use my nix wrapper so I need to prepend my bin after the flake bin is added.
 PATH_add ~/.local/bin
 
 yellow='\e[33m'
 reset='\e[m'
-secrets_directory='./secrets'
-github_file="$secrets_directory/github.txt"
-if [ -f "$github_file" ]; then
-  NIX_CONFIG="access-tokens = github.com=$(cat "$github_file")"
-  export NIX_CONFIG
-else
-  echo -e "[${yellow}warning${reset}] secret '$github_file' was not found"
-fi
+function get_secret {
+  path="./secrets/$1"
+
+  if [ -f "$path" ]; then
+    cat "$path"
+  else
+    echo -e "[${yellow}warning${reset}] secret '$path' was not found" 1>&2
+  fi
+}
+
+NIX_CONFIG="access-tokens = github.com=$(get_secret 'github.txt')"
+export NIX_CONFIG
+BWS_ACCESS_TOKEN="$(get_secret 'bws.txt')"
+export BWS_ACCESS_TOKEN
