--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -27,9 +27,11 @@ post-merge:
   scripts:
     "post-merge.bash":
       runner: direnv exec "$PWD" bash
+      interactive: true
 
 post-rewrite:
   scripts:
     "post-rewrite.bash":
       runner: direnv exec "$PWD" bash
+      interactive: true
 
