--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -148,8 +148,8 @@ set -g @standoutcolor 'colour7'
 set -g @bgcolor 'terminal'
 
 # status bar configuration
-set -g status-position top
-set -g pane-border-status top
+set -g status-position bottom
+set -g pane-border-status bottom
 
 # Panes
 set -g pane-border-lines single
@@ -168,6 +168,7 @@ set -g status-interval 1
 set -g status on
 set -g @accentcolor 'colour6'
 set -g @fgcolor 'terminal'
+set -g @bgcolor2 'colour15'
 set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
 set-hook -g client-focus-in "set -g @accentcolor 'colour6'; set -g @fgcolor 'terminal'"
 set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
@@ -177,27 +178,24 @@ set -g window-status-format ''
 set -g window-status-current-format ''
 
 # Left half of status bar
-set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
-set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]#(#{@superscript_number} #I)#[fg=default] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore]  ,}#[nounderscore]"
+set -g @window-status-format "#[range=window|#{window_index}]#[dim fg=default]  #I:#W#[nodim]  "
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]» #[fg=default]#I:#W#{?window_zoomed_flag,  ,} #[fg=colour5]«"
 set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15] "
-# TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator flash. Maybe I
-# can find a way to only set this if something changes or see if this can be addressed in tmux_mode_indicator.
-# Until then, I moved the reload indicator logic to here so it doesn't flash. Now there's a little delay before
-# it's shown.
-set -g status-left " #[fg=colour15]#[fg=default]#S#[fg=colour15] #{E:@window-info-format}#{tmux_mode_indicator}"
+# TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator
+# flash. Maybe I can find a way to only set this if something changes or see if this can be
+# addressed in tmux_mode_indicator.  Until then, I moved the reload indicator logic to here so it
+# doesn't flash. Now there's a little delay before it's shown.
+set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
 if-shell 'tmux show-options -g @config-loaded' {
-    set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]  RELOADING#[noreverse]#{@right_symbol}"
+    set @mode_indicator_custom_prompt "#[italics bg=#{@bgcolor} fg=default]  RELOADING... "
     refresh-client -S
 } {
     set -g @config-loaded "1"
 }
 
 # Right half of status bar
-set -g @menu-button "#[range=left]#[bg=default,fg=default]󰍜 "
-set -g status-right "#{E:@menu-button} "
-set -g status-right-length 999
+set -g status-right '#{tmux_mode_indicator}'
 
 # Popups
 set -g popup-border-lines heavy
@@ -211,15 +209,16 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
 # tmux-resurrect: Saves the state of tmux to a file so it can be restored later
 #
-# TODO: I want to restore any arguments that were passed to neovim, but the problem is that the Nix wrapper
-# for neovim calls the actual neovim binary with arguments that contain spaces. The only platform
-# where resurrect can retain spaces in arguments, without splitting them into separate arguments, is Linux
-# with the 'linux_procfs' strategy. So here I only set arguments to be replaced if I'm on Linux.
-# issue: https://github.com/tmux-plugins/tmux-resurrect/issues/60
+# TODO: I want to restore any arguments that were passed to neovim, but the problem is that the Nix
+# wrapper for neovim calls the actual neovim binary with arguments that contain spaces. The only
+# platform where resurrect can retain spaces in arguments, without splitting them into separate
+# arguments, is Linux with the 'linux_procfs' strategy. So here I only set arguments to be replaced
+# if I'm on Linux. issue: https://github.com/tmux-plugins/tmux-resurrect/issues/60
 set -g @myeditor_resurrect '"~myeditor->myeditor"'
 if-shell "uname | grep -q Linux" {
-    # TODO: Restoring commands with spaces is not working on Linux, though it should with procfs as the restore
-    # strategy. Until it's fixed, I will not restore arguments on Linux either for the reason in the TODO above.
+    # TODO: Restoring commands with spaces is not working on Linux, though it should with procfs as
+    # the restore strategy. Until it's fixed, I will not restore arguments on Linux either for the
+    # reason in the TODO above.
     set -g @myeditor_resurrect '"~myeditor->myeditor"'
 }
 # "~sh" is to match "/bin/sh <path_to_man> <manpage>"
@@ -230,18 +229,18 @@ if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#[blink]󰌌  PREFIX"
-set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]  SYNC#[noreverse]#{@right_symbol}"
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#[blink]󰌌  PREFIX "
+set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#{@left_symbol}#[reverse]  SYNC#[noreverse]#{@right_symbol} "
 set -g @mode_indicator_copy_prompt '#[bg=default] '
-set -g @mode_indicator_empty_prompt '#[bg=default] '
+set -g @mode_indicator_empty_prompt '#[range=left]#[bg=default fg=#{@standoutcolor} align=right] #S '
 
 # tmux-suspend
 set -g @suspend_key 'M-z'
-# I prepend pane-border-format instead of overwriting it so if two windows are in a mode (e.g. copy and suspended),
-# or one window is in two modes, both border indicators will be displayed.
+# I prepend pane-border-format instead of overwriting it so if two windows are in a mode (e.g. copy
+# and suspended), or one window is in two modes, both border indicators will be displayed.
 #
-# The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way if the active
-# pane changes, the suspended icon will move to the newly active pane.
+# The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way
+# if the active pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
     pane-border-format::#{l:#{?pane_active\\,#[bold] 󰌏  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
