--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -178,8 +178,8 @@ set -g window-status-format ''
 set -g window-status-current-format ''
 
 # Left half of status bar
-set -g @window-status-format "#[range=window|#{window_index}]#[dim fg=default]  #I:#W#[nodim]  "
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]» #[fg=default]#I:#W#{?window_zoomed_flag,  ,} #[fg=colour5]«"
+set -g @window-status-format "#[range=window|#{window_index}]#[dim fg=default]  #I:#W#[nodim]"
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]» #[fg=default]#I:#W#{?window_zoomed_flag,  ,}"
 set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15] "
 # TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator
 # flash. Maybe I can find a way to only set this if something changes or see if this can be
@@ -188,7 +188,7 @@ set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status
 set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
 if-shell 'tmux show-options -g @config-loaded' {
-    set @mode_indicator_custom_prompt "#[italics bg=#{@bgcolor} fg=default]  RELOADING... "
+    set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING... "
     refresh-client -S
 } {
     set -g @config-loaded "1"
