--- a/treefmt.toml
+++ b/treefmt.toml
@@ -38,6 +38,9 @@ includes = ["justfile",]
 command = "stylua"
 options = ["--column-width", "100",]
 includes = ["*.lua",]
+# In order for lush.nvim to give a live preview of a color scheme, the file needs to have a certain
+# format so I won't format it here.
+excludes = ["*neovim/lua/terminal/aesthetic/colorschemes/*.lua"]
 
 [formatter.go]
 command = "gofmt"
