--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -27,6 +27,16 @@ set-option -g allow-passthrough on
 set-option -g focus-events on
 set-option -g detach-on-destroy off
 
+# Enable all terminal features
+set -ga terminal-features "*:hyperlinks"
+set -ga terminal-features "*:clipboard"
+set -ga terminal-features "*:sixel"
+set -ga terminal-features "*:sync"
+# truecolor
+set -ga terminal-features "*:RGB"
+# underline styles
+set -ga terminal-features "*:usstyle"
+
 # Border characters for statusbar indicators
 set -g @left_symbol ""
 set -g @right_symbol ""
