--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -69,7 +69,7 @@ set-option -ga update-environment " VSCODE_INJECTION"
 bind-key -n MouseDrag1Status swap-window -d -t=
 
 # Create a new window using the current pane's directory as the new window's directory
-bind -n M-t new-window -c "#{pane_current_path}"
+bind -n C-M-t new-window -c "#{pane_current_path}"
 
 # reload
 bind -n M-r run-shell -b 'tmux-config-reload'
@@ -180,7 +180,7 @@ set -g @accentcolor 'colour6'
 set -g @fgcolor 'terminal'
 set -g @bgcolor2 'colour15'
 set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
-set-hook -g client-focus-in "set -g @accentcolor 'colour6'; set -g @fgcolor 'terminal'"
+set-option -gF client-focus-in "set -g @accentcolor '#{@accentcolor}'; set -g @fgcolor 'terminal'"
 set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
 
 # Remove the window status. I'll add it to the statusbar manually
@@ -188,9 +188,10 @@ set -g window-status-format ''
 set -g window-status-current-format ''
 
 # Left half of status bar
-set -g @window-status-format "#[range=window|#{window_index}]#[dim fg=default]  #I:#W#[nodim]"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}]» #[fg=default]#I:#W#{?window_zoomed_flag,  ,}"
-set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15] "
+set -g @digit_icon "python -c \"import sys; index = int(sys.argv[1]); digit_icons = ['󰬺 ', '󰬻 ', '󰬼 ', '󰬽 ', '󰬾 ', '󰬿 ', '󰭀 ', '󰭁 ', '󰭂 ']; print(digit_icons[index - 1] if index <= 9 else '󰿮 ')\""
+set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)#[fg=default dim]#W#[nodim]"
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #(#{@digit_icon} #I)#[fg=default]#W#{?window_zoomed_flag,  ,}"
+set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=right] #[fg=colour15] "
 # TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator
 # flash. Maybe I can find a way to only set this if something changes or see if this can be
 # addressed in tmux_mode_indicator.  Until then, I moved the reload indicator logic to here so it
