--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -69,7 +69,7 @@ set-option -ga update-environment " VSCODE_INJECTION"
 bind-key -n MouseDrag1Status swap-window -d -t=
 
 # Create a new window using the current pane's directory as the new window's directory
-bind -n C-M-t new-window -c "#{pane_current_path}"
+bind -n M-t new-window -c "#{pane_current_path}"
 
 # reload
 bind -n M-r run-shell -b 'tmux-config-reload'
@@ -176,7 +176,7 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g @accentcolor 'colour6'
+set -g @accentcolor 'colour7'
 set -g @fgcolor 'terminal'
 set -g @bgcolor2 'colour15'
 set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
