(smart-plug) export VIRTUAL_ENV so debugpy knows which python to use

--- a/dotfiles/smart_plug/.envrc
+++ b/dotfiles/smart_plug/.envrc
@@ -2,3 +2,8 @@
 
 source_up
 use flake '../../#smartPlug'
+
+# So debugpy can find the right python to use. The 2 dirnames remove '/bin/python' so we end up with
+# the python installation folder.
+VIRTUAL_ENV="$(dirname "$( dirname "$(realpath --canonicalize-existing "$(which python)")" )")"
+export VIRTUAL_ENV
