--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -22,7 +22,7 @@ set-option -g set-titles on
 set-option -g set-titles-string '#T'
 # When a client becomes active, run attach-session which will update the environment
 set-hook -g client-active attach-session
-set-option -g allow-passthrough on
+set-option -g allow-passthrough all
 # The output from ':checkhealth' in neovim says 'autoread' might not work if this isn't set.
 set-option -g focus-events on
 set-option -g detach-on-destroy off
