--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -145,7 +145,8 @@ bind-key -T root MouseUp1StatusLeft \
         "New Window" w { new-window } \
         "New Session" s { new-session } \
         "Rename Session" r { command-prompt -I "#S" { rename-session "%%" } } \
-        "Choose Session" c { choose-tree -Zs }
+        "Choose Session" c { choose-tree -Zs } \
+        "Copy Mode" y { copy-mode }
 
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
