--- a/dotfiles/git/config
+++ b/dotfiles/git/config
@@ -4,6 +4,9 @@
 [core]
   pager = delta
   fsmonitor = true
+  # more on this feature and what to verify before enabling it:
+  # https://git-scm.com/docs/git-update-index#_untracked_cache
+  untrackedCache = true
 [push]
   default = current
 [pull]
